# pykanban

./: .pre-commit-config.yaml  README.rst  conftest.py  kanban.py  pyproject.toml
data/: log_handlers.json
data/style_sheets/: day.qss  dayTemp.qss  night.qss
data/test/: Test.db
pykanban/: custom_logger.py  database.py  dialogs.py  main.py  menu_bar.py  tabs.py  widgets.py
tests/: db_test.py  one_test.py
